--- a/jsp_mini_project/src/main/webapp/css/CrossFitMain.css
+++ b/jsp_mini_project/src/main/webapp/css/CrossFitMain.css
@@ -1,77 +1,88 @@
 @charset "UTF-8";
- body {
-      margin: 0;
-      padding: 0;
-      font-family: 'Arial', sans-serif;
-      overflow: hidden;
-    }
 
-    header {
-      background-color: #333;
-      color: #fff;
-      padding: 10px;
-      text-align: center;
-      display: flex;
-      justify-content: space-between;
-      position: relative;
-      overflow: hidden;
-    }
+body {
+	margin: 0;
+	padding: 0;
+	font-family: 'Arial', sans-serif;
+	overflow: hidden;
+}
 
-    nav {
-      display: flex;
-      justify-content: center;
-      margin-top: 10px;
-    }
+header {
+	background-color: #333;
+	color: #fff;
+	padding: 10px;
+	text-align: center;
+	display: flex;
+	justify-content: space-between;
+	position: relative;
+	overflow: hidden;
+}
 
-    nav a {
-      color: #fff;
-      text-decoration: none;
-      padding: 10px 20px;
-      margin: 0 10px;
-      border-radius: 5px;
-      transition: background-color 0.3s;
-    }
+nav {
+	display: flex;
+	justify-content: center;
+	margin-top: 10px;
+}
 
-    nav a:hover {
-      background-color: #555;
-    }
+nav a {
+	color: #fff;
+	text-decoration: none;
+	padding: 10px 20px;
+	margin: 0 10px;
+	border-radius: 5px;
+	transition: background-color 0.3s;
+}
 
-    .right-header {
-      display: flex;
-      align-items: center;
-    }
+nav a:hover {
+	background-color: #555;
+}
 
-    input.login {
-      padding: 8px 15px;
-      border: none;
-      border-radius: 5px;
-      background-color: #4CAF50;
-      color: #fff;
-      cursor: pointer;
-    }
+.right-header {
+	display: flex;
+	align-items: center;
+}
 
-    .slideshow-container {
-      max-width: 1500px;
-      height: 1000px; /* 16:9 aspect ratio (1000px / 16 * 9) */
-      position: relative;
-      margin: auto;
-      overflow: hidden;
-    }
-    .mySlides {
-      display: none;
-    }
+input.login {
+	padding: 8px 15px;
+	border: none;
+	border-radius: 5px;
+	background-color: #4CAF50;
+	color: #fff;
+	cursor: pointer;
+}
 
-    .fade {
-      animation: fade 5s infinite;
-    }
+.slideshow-container {
+	max-width: 1500px;
+	height: 1000px;
+	/* 16:9 aspect ratio (1000px / 16 * 9) */
+	position: relative;
+	margin: auto;
+	overflow: hidden;
+}
 
-    .mySlides img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-    }
+.mySlides {
+	display: none;
+}
 
-    @keyframes fade {
-      0%, 100% { opacity: 0; }
-      25%, 75% { opacity: 1; }
-    }
+.fade {
+	animation: fade 5s infinite;
+}
+
+.mySlides img {
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+}
+
+@keyframes fade {
+
+	0%,
+	100% {
+		opacity: 0;
+	}
+
+	25%,
+	75% {
+		opacity: 1;
+	}
+}
