--- a/jsp_mini_project/src/main/webapp/css/style.css
+++ b/jsp_mini_project/src/main/webapp/css/style.css
@@ -10,6 +10,7 @@ h6 {
 	margin: 0;
 	font-weight: 400;
 	color: #333;
+	text-decoration: none;
 }
 
 #header_container {
@@ -43,6 +44,7 @@ a, div{
 
 a:hover {
 	color: red;
+
 }
 
 li {
